# dependable_llm

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
dependent/core/: base.py
dependent/core/trainers/: __init__.py  base.py  hf.py  mosaic.py
dependent/core/utils/: config.py  datasplit.py
dependent/examples/: golden_eval_examples.py  sft_spider.py
dependent/text2sql/: __init__.py  text2sql.py
dependent/text2sql/dataset_adapter/: README.md  test.py
dependent/text2sql/dataset_adapter/metrics/cosql/: cosql.py  cosql_interact_match.py  cosql_interact_test_suite.py
dependent/text2sql/dataset_adapter/metrics/sparc/: sparc.py  sparc_interact_match.py
dependent/text2sql/dataset_adapter/metrics/spider/: spider.py  spider_exact_match.py  spider_test_suite.py
dependent/text2sql/dataset_adapter/preprocess/: add_coref_to_dataset_tmp.py  lgerels2t5rels.py  lgerels2t5rels_changeOrder.py  process_dataset.py
dependent/text2sql/dataset_adapter/utils/: consts.py  cosql.py  dataset.py  dataset_loader.py  lgerels2t5rels.py  pipeline.py  sparc.py  spider.py
dependent/text2sql/utils/: collator.py  prompts.py  tokenization.py
local_datasets/: dataset.py  utils.py
local_datasets/cosql/: cosql.py
local_datasets/sparc/: sparc.py
local_datasets/spider/: spider.py
